--- a/app/src/main/res/layout/activity_dashboard_user.xml
+++ b/app/src/main/res/layout/activity_dashboard_user.xml
@@ -35,16 +35,16 @@
             android:text="tuananhmvp"
             android:textColor="@color/white"
             />
+
         <ImageButton
             android:id="@+id/logoutBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="10dp"
-            android:src="@drawable/ic_logout_white"
-            android:layout_alignParentEnd="true"
             android:background="@android:color/transparent"
-            />
+            android:src="@drawable/ic_logout_white" />
 
     </RelativeLayout>
 
