--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,8 +21,7 @@
             android:layout_height="110dp"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="40dp"
-            android:src="@drawable/logo"
-            />
+            android:src="@drawable/logo" />
         <TextView
             android:layout_below="@id/iconIv"
             android:layout_marginTop="10dp"
