--- a/app/src/main/res/layout/activity_pdf_add.xml
+++ b/app/src/main/res/layout/activity_pdf_add.xml
@@ -13,39 +13,36 @@
         android:id="@+id/toolbarRl"
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:background="@drawable/shape_toolbar01" >
+        android:background="@drawable/shape_toolbar01">
 
         <!--Back button-->
         <ImageButton
             android:id="@+id/backBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_back_white"
             android:layout_margin="10dp"
             android:background="@android:color/transparent"
             android:padding="5dp"
-            />
+            android:src="@drawable/ic_back_white" />
         <!--Icon Image-->
         <ImageView
             android:id="@+id/iconIv"
             android:layout_width="110dp"
             android:layout_height="110dp"
-            android:src="@drawable/logo"
-            android:layout_centerHorizontal="true"
             android:layout_below="@id/backBtn"
-            />
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/logo" />
         <!--Title-->
         <TextView
             android:id="@+id/titleTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Add a New Book"
+            android:layout_below="@id/iconIv"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
-            android:layout_below="@id/iconIv"
-            android:textSize="28sp"
+            android:text="Add a New Book"
             android:textColor="@color/white"
-            />
+            android:textSize="28sp" />
 
         <!--Attach pdf buton-->
         <ImageButton
