--- a/app/src/main/res/layout/activity_pdf_detail.xml
+++ b/app/src/main/res/layout/activity_pdf_detail.xml
@@ -37,16 +37,17 @@
 
     <!--All content under scrollview-->
     <ScrollView
-        android:layout_below="@id/toolbarRl"
-        android:padding="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/bookOptionsLL"
+        android:layout_below="@id/toolbarRl"
+        android:padding="10dp">
+
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
             <!--BookInfo-->
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -54,16 +55,16 @@
                 <!--Book Preview-->
                 <RelativeLayout
                     android:id="@+id/pdfRl"
-                    android:layout_marginEnd="5dp"
-                    android:background="@color/gray02"
                     android:layout_width="110dp"
-                    android:layout_height="150dp">
+                    android:layout_height="150dp"
+                    android:layout_marginEnd="5dp"
+                    android:background="@color/gray02">
 
                     <!--PDFView-->
                     <com.github.barteksc.pdfviewer.PDFView
                         android:id="@+id/pdfView"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
+                        android:layout_height="match_parent" />
                     <!--ProgressBar-->
                     <ProgressBar
                         android:id="@+id/progressBar"
@@ -79,8 +80,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_toEndOf="@+id/pdfRl"
-                    android:text="Book Title"
-                    />
+                    android:text="Book Title" />
 
                 <!--Table-->
                 <TableLayout
@@ -91,132 +91,133 @@
 
                     <!--Category Row-->
                     <TableRow>
+
                         <TextView
                             android:id="@+id/categoryLableTv"
                             style="@style/TextAppearance.MaterialComponents.Caption"
-                            android:text="Category"
-                            android:layout_marginEnd="5dp"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="5dp"
+                            android:text="Category" />
 
                         <TextView
                             android:id="@+id/categoryTv"
                             style="@style/TextAppearance.MaterialComponents.Caption"
-                            android:text="N/A"
-                            android:layout_weight="1"
-                            android:layout_marginEnd="5dp"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="5dp"
+                            android:layout_weight="1"
+                            android:text="N/A" />
 
                     </TableRow>
 
                     <!--Date Row-->
-                    <TableRow
-                        android:layout_marginTop="5dp">
+                    <TableRow android:layout_marginTop="5dp">
+
                         <TextView
                             android:id="@+id/dateLableTv"
                             style="@style/TextAppearance.MaterialComponents.Caption"
-                            android:text="Date"
-                            android:layout_marginEnd="5dp"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="5dp"
+                            android:text="Date" />
 
                         <TextView
                             android:id="@+id/dateTv"
                             style="@style/TextAppearance.MaterialComponents.Caption"
-                            android:text="N/A"
-                            android:layout_weight="1"
-                            android:layout_marginEnd="5dp"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="5dp"
+                            android:layout_weight="1"
+                            android:text="N/A" />
 
                     </TableRow>
 
                     <!--Size Row-->
-                    <TableRow
-                        android:layout_marginTop="5dp">
+                    <TableRow android:layout_marginTop="5dp">
+
                         <TextView
                             android:id="@+id/sizeLableTv"
                             style="@style/TextAppearance.MaterialComponents.Caption"
-                            android:text="Size"
-                            android:layout_marginEnd="5dp"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="5dp"
+                            android:text="Size" />
 
                         <TextView
                             android:id="@+id/sizeTv"
                             style="@style/TextAppearance.MaterialComponents.Caption"
-                            android:text="N/A"
-                            android:layout_weight="1"
-                            android:layout_marginEnd="5dp"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="5dp"
+                            android:layout_weight="1"
+                            android:text="N/A" />
 
                     </TableRow>
 
                     <!--Views Count Row-->
-                    <TableRow
-                        android:layout_marginTop="5dp">
+                    <TableRow android:layout_marginTop="5dp">
+
                         <TextView
                             android:id="@+id/viewsLableTv"
                             style="@style/TextAppearance.MaterialComponents.Caption"
-                            android:text="Views"
-                            android:layout_marginEnd="5dp"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="5dp"
+                            android:text="Views" />
 
                         <TextView
                             android:id="@+id/viewsTv"
                             style="@style/TextAppearance.MaterialComponents.Caption"
-                            android:text="N/A"
-                            android:layout_weight="1"
-                            android:layout_marginEnd="5dp"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="5dp"
+                            android:layout_weight="1"
+                            android:text="N/A" />
 
                     </TableRow>
 
                     <!--Downloads Count Row-->
-                    <TableRow
-                        android:layout_marginTop="5dp">
+                    <TableRow android:layout_marginTop="5dp">
+
                         <TextView
                             android:id="@+id/downloadsLableTv"
                             style="@style/TextAppearance.MaterialComponents.Caption"
-                            android:text="Downloads"
-                            android:layout_marginEnd="5dp"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="5dp"
+                            android:text="Downloads" />
 
                         <TextView
                             android:id="@+id/downloadsTv"
                             style="@style/TextAppearance.MaterialComponents.Caption"
-                            android:text="N/A"
-                            android:layout_weight="1"
-                            android:layout_marginEnd="5dp"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="5dp"
+                            android:layout_weight="1"
+                            android:text="N/A" />
 
                     </TableRow>
 
                     <!--Number of pages Row-->
-                    <TableRow
-                        android:layout_marginTop="5dp">
+                    <TableRow android:layout_marginTop="5dp">
+
                         <TextView
                             android:id="@+id/pagesLableTv"
                             style="@style/TextAppearance.MaterialComponents.Caption"
-                            android:text="Pages"
-                            android:layout_marginEnd="5dp"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="5dp"
+                            android:text="Pages" />
 
                         <TextView
                             android:id="@+id/pagesTv"
                             style="@style/TextAppearance.MaterialComponents.Caption"
-                            android:text="N/A"
-                            android:layout_weight="1"
-                            android:layout_marginEnd="5dp"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="5dp"
+                            android:layout_weight="1"
+                            android:text="N/A" />
 
                     </TableRow>
 
@@ -231,12 +232,34 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:text="The description of the book."
-                android:textColor="@color/black"
-                />
-            
+                android:textColor="@color/black" />
+
         </LinearLayout>
-        
+
     </ScrollView>
+
+    <!--Bottom buttons for book options-->
+    <LinearLayout
+        android:id="@+id/bookOptionsLL"
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:background="@android:color/transparent"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/readBookBtn"
+            android:text="Read"
+            android:drawableTop="@drawable/ic_book_white"
+            android:layout_width="match_parent"
+            android:textColor="@color/white"
+           android:background="@drawable/shape_button01"
+            android:layout_height="match_parent"
+            />
+    </LinearLayout>
    
 
 
