--- a/app/src/main/res/layout/activity_pdf_detail.xml
+++ b/app/src/main/res/layout/activity_pdf_detail.xml
@@ -250,15 +250,30 @@
         android:layout_marginRight="5dp"
         android:layout_height="wrap_content">
 
+        <!--Button: Read book-->
         <Button
             android:id="@+id/readBookBtn"
             android:text="Read"
             android:drawableTop="@drawable/ic_book_white"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:textColor="@color/white"
-           android:background="@drawable/shape_button01"
+            android:background="@drawable/shape_button01"
             android:layout_height="match_parent"
+            android:layout_marginRight="5dp"
+            android:layout_weight="1"
             />
+
+        <!--Button: Download Book (Downloads Fold)-->
+        <Button
+            android:id="@+id/downloadBookBtn"
+            android:layout_weight="1"
+            android:drawableTop="@drawable/ic_download_white"
+            android:text="Download"
+            android:textColor="@color/white"
+            android:background="@drawable/shape_button01"
+            android:layout_width="0dp"
+            android:layout_marginLeft="5dp"
+            android:layout_height="match_parent"/>
     </LinearLayout>
    
 
