Tabs for Book categories, search...

--- a/app/src/main/res/layout/activity_dashboard_user.xml
+++ b/app/src/main/res/layout/activity_dashboard_user.xml
@@ -48,6 +48,26 @@
 
     </RelativeLayout>
 
+    <!--Tabs: Show Book Categories-->
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
+        android:background="@android:color/transparent"
+        android:layout_margin="5dp"
+        app:tabIndicatorFullWidth="false"
+        app:tabBackground="@drawable/tab_selector"
+        app:tabIndicatorHeight="0dp"
+        android:layout_below="@id/toolbarRl"
+        app:tabMode="scrollable"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <!--View Pager: Show categorized book in fragment-->
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewPager"
+        android:layout_below="@id/tabLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
 
 
 
